--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.1.2 ()
+=====
+* Fixed Makefile for BSD: call $(MAKE) for generating documentation.
+
 0.1.1 (16-04-2008)
 =====
 * Install .cmx file
