* Removed xml-light use in xmlplaylist, switched to xmlm  * Removed xml-light use as well as anonymous logins in    lastfm radio part: anonymous connections to radios is    no longer available at lastfm..  * Made lastfm login mandatory for radio  * Made audioscrobbler and radio host configurable, in order    to allow to connect to other implementations, in particular    libre.fm  * Adapted liquidsoap for the new lastfm API
--HG--
extra : convert_revision : svn%3Aaec24677-d710-0410-a355-ac75e2bdf181/trunk%406581

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.1.2 ()
 =====
 * Fixed Makefile for BSD: call $(MAKE) for generating documentation.
+* Now using xmlm instead of xml-light.
 
 0.1.1 (16-04-2008)
 =====
