Fixed playlist parsing order.
--HG--
extra : convert_revision : svn%3Aaec24677-d710-0410-a355-ac75e2bdf181/trunk%406608

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 =====
 * Fixed Makefile for BSD: call $(MAKE) for generating documentation.
 * Now using xmlm instead of xml-light.
+* Make sure that order of tracks is preserved when parsing the
+  playlists.
 
 0.1.1 (16-04-2008)
 =====
