Added debugging option to ocaml modules
--HG--
extra : convert_revision : svn%3Aaec24677-d710-0410-a355-ac75e2bdf181/trunk%406632

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.1.2 ()
 =====
+* Added support for --enable-debugging configure option
 * Fixed Makefile for BSD: call $(MAKE) for generating documentation.
 * Now using xmlm instead of xml-light.
 * Make sure that order of tracks is preserved when parsing the
