--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.1.4 ()
+=====
+* Switched deprecated String.lowercase API
+  to String.lowercase_ascii
+
 0.1.3 (02-07-2011)
 =====
 * Register string_of_exception in Printexc
