--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.1.5 (10-09-2020)
+======
+* Switch to dune
+* Depends on OCaml > 4.03.0
+
 0.1.4 (03-08-2015)
 =====
 * Switched deprecated String.lowercase API
