--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 0.1.5 (10-09-2020)
 ======
 * Switch to dune
-* Depends on OCaml > 4.03.0
+* Depends on OCaml >= 4.03.0
 
 0.1.4 (03-08-2015)
 =====
